[tool.poetry]
name = "moz-screenshot"
version = "0.1.0"
description = "Screen shot a part of html."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/moz-screenshot"
repository = "https://github.com/mozkzki/moz-screenshot"
documentation = "https://github.com/mozkzki/moz-screenshot/wiki"
keywords = ['screenshot', 'chrome', 'chrome driver']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "0.21.1"
selenium = "4.9.1"
Pillow = "9.5.0"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.4.0"
pytest = "7.4.0"
black = "23.3.0"
pytest-cov = "4.1.0"
coverage = "7.2.7"
isort = "5.12.0"
sphinx = "6.2.1"
sphinx-rtd-theme = "1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
